--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_beautiful_popup: ^1.7.0
-  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker_plus: ^2.1.0
   flutter_slider_drawer: ^2.1.1
   flutter_svg: ^2.1.0
   ftoast: ^2.0.0
